--- a/index.html
+++ b/index.html
@@ -6,40 +6,38 @@
     </head>
 
     <header>
-        <img src="img\Foto.jfif" alt="Maria Paula Sánchez">
-        <h1> CURRICULUM VITAE MARIA PAULA SANCHEZ CORTES </h1>
+        <img src="img\Foto.jfif" class="foto" alt="Maria Paula Sánchez">
+        <div> CURRICULUM VITAE MARIA PAULA SANCHEZ CORTES <div>
     </header>
 
     <main>
         <section>
         <h2> DATOS PERSONALES </h2>
-        <ul>
-            <li> <b><i> Nombre completo: </i></b> Maria Paula Sánchez Cortés </li>
-            <li> <b><i> Fecha de nacimiento: </i></b> 10 de Noviembre del 2001 </li>
-            <li> <b><i> Lugar de nacimiento: </i></b> Bogotá, Colombia </li>
-        </ul>
+        <b><i> Nombre completo: </i></b> Maria Paula Sánchez Cortés <br>
+        <b><i> Fecha de nacimiento: </i></b> 10 de Noviembre del 2001 <br>
+        <b><i> Lugar de nacimiento: </i></b> Bogotá, Colombia <br>
         </section>
 
         <section>
         <h2> FORMACIÓN ACADÉMICA </h2>
-        <ul>
-            <li> <b> 2012-2018: </b> Colegio Bilingue Real Americano </li>
-            <p> Bachiller académico </p>
-            <li> <b> 2019-Actual: </b> Universidad de la Salle </li>
-            <p> Ingeniería Química </p>
-        </ul>
+        <dl>
+            <dt> <b> 2012 - 2018: </b> </dt>
+            <dd> Colegio Bilingue Real Americano - Bachiller académico </dd> <br>
+            <dt> <b> 2019 - Actualidad: </b> </dt>
+            <dt> Universidad de la Salle - Ingeniería Química </dt>
+        </dl>
         </section>
 
         <section>
         <h2> EXPERIENCIA LABORAL </h2>
-        <ul>
-            <li> <b> 2023-Actual: </b> Wood Engineering & Consultancy SAS </li>
-            <p> Trainee Engineer </p>
-        </ul>
+        <dl>
+            <dt> <b> 2023 - Actualidad: </b> </dt>
+            <dd> Wood Engineering & Consultancy SAS - Trainee Engineer </dd> <br>
+        </dl>
         </section>
     </main>
 
     <footer>
-        <a href="https://www.linkedin.com/in/maria-paula-s%C3%A1nchez-cort%C3%A9s-54890923b/"> Ingresa a mi LinkedIn </a>
+        <h3> Ingresa a mi LinkedIn <a href="https://www.linkedin.com/in/maria-paula-s%C3%A1nchez-cort%C3%A9s-54890923b/"> <img src="img\LinkedIn.png" class="Logo" alt="Logo LinkedIn"> </a> </h3>
     </footer>
 </body>
