--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     <main>
         <section>
         <h2> DATOS PERSONALES </h2>
-        <b><i> Nombre completo: </i></b> Maria Paula Sánchez Cortés <br>
-        <b><i> Fecha de nacimiento: </i></b> 10 de Noviembre del 2001 <br>
-        <b><i> Lugar de nacimiento: </i></b> Bogotá, Colombia <br>
+        <b> Nombre completo: </b> Maria Paula Sánchez Cortés <br>
+        <b> Fecha de nacimiento: </b> 10 de Noviembre del 2001 <br>
+        <b> Lugar de nacimiento: </b> Bogotá, Colombia <br>
+        <b> Correo electrónico: </b> mapizzsanchez@gmail.com <br>
         </section>
 
         <section>
