--- a/index.html
+++ b/index.html
@@ -7,34 +7,78 @@
 
     <header>
         <img src="img\Foto.jfif" class="foto" alt="Maria Paula Sánchez">
-        <div> CURRICULUM VITAE MARIA PAULA SANCHEZ CORTES <div>
+        <div class="Titulo"> CURRICULUM VITAE MARIA PAULA SANCHEZ CORTES <div>
     </header>
 
     <main>
-        <section>
-        <h2> DATOS PERSONALES </h2>
-        <b> Nombre completo: </b> Maria Paula Sánchez Cortés <br>
-        <b> Fecha de nacimiento: </b> 10 de Noviembre del 2001 <br>
-        <b> Lugar de nacimiento: </b> Bogotá, Colombia <br>
-        <b> Correo electrónico: </b> mapizzsanchez@gmail.com <br>
+        <section class="Indice"> 
+            <div class="div-Indice"><a class="a-Indice" href="#SobreMi"> SOBRE MÍ </a></div>
+            <div class="div-Indice"><a class="a-Indice" href="#DatosPersonales"> DATOS PERSONALES </a></div>
+            <div class="div-Indice"><a class="a-Indice" href="#FormacionAcademica"> FORMACIÓN ACADÉMICA </a></div>
+            <div class="div-Indice"><a class="a-Indice" href="#Habilidades"> HABILIDADES Y SOFTWARE  </a></div>
+            <div class="div-Indice"><a class="a-Indice" href="#Certificados"> CERTIFICADOS </a></div>
+            <div class="div-Indice"><a class="a-Indice" href="#ExpericenciaLaboral"> EXPERIENCIA LABORAL </a></div>
+            <div class="div-Indice"><a class="a-Indice" href="#InteresesPersonales"> INTERESES PERSONALES </a></div>
+        </section>
+
+        <section class="section-SobreMi">
+            <h2 id="SobreMi"> SOBRE MÍ </h2>
+            <p> Soy una persona responsable, dinámica, alegre y apasionada por el aprendizaje y la innovación, con capacidad de
+                desempeñarme eficientemente en la labor que se me asigne. Me gusta el trabajo en equipo y aportar ideas para lograr
+                soluciones efectivas. </p>
         </section>
 
         <section>
-        <h2> FORMACIÓN ACADÉMICA </h2>
-        <dl>
-            <dt> <b> 2012 - 2018: </b> </dt>
-            <dd> Colegio Bilingue Real Americano - Bachiller académico </dd> <br>
-            <dt> <b> 2019 - Actualidad: </b> </dt>
-            <dt> Universidad de la Salle - Ingeniería Química </dt>
-        </dl>
+            <h2 id="DatosPersonales"> DATOS PERSONALES </h2>
+            <b> Nombre completo: </b> Maria Paula Sánchez Cortés <br>
+            <b> Fecha de nacimiento: </b> 10 de Noviembre del 2001 <br>
+            <b> Lugar de nacimiento: </b> Bogotá, Colombia <br>
+            <b> Correo electrónico: </b> mapizzsanchez@gmail.com <br>
         </section>
 
         <section>
-        <h2> EXPERIENCIA LABORAL </h2>
-        <dl>
-            <dt> <b> 2023 - Actualidad: </b> </dt>
-            <dd> Wood Engineering & Consultancy SAS - Trainee Engineer </dd> <br>
-        </dl>
+            <h2 id="FormacionAcademica"> FORMACIÓN ACADÉMICA </h2>
+            <dl>
+                <dt> <b> 2012 - 2018: </b> </dt>
+                <dd> Colegio Bilingue Real Americano - Bachiller académico </dd> <br>
+                <dt> <b> 2019 - Actualidad: </b> </dt>
+                <dt> Universidad de la Salle - Ingeniería Química </dt>
+            </dl>
+        </section>
+
+        <section>
+            <h2 id="Habilidades"> HABILIDADES Y SOFTWARE </h2>
+            <h3> HABILIDADES </h3>
+            <div> Trabajo en equipo </div>
+            <div> Resolución de problemas </div> 
+            <div> Comunicación oral y escrita asertiva </div> 
+            <div> Liderazgo </div> 
+            <h3> SOFTWARE </h3>
+            <div> Aspen HYSYS </div>        
+            <div> Aspen Plus </div> 
+            <div> Microsoft Office </div> 
+            <div> MATLAB </div> 
+            <div> Python </div>
+            <div> HTML y CSS </div>
+        </section>
+
+        <section>
+            <h2 id="Certificados"> CERTIFICADOS </h2>
+            
+        </section>
+
+        <section>
+            <h2 id="ExperienciaLaboral"> EXPERIENCIA LABORAL </h2>
+            <dl>
+                <dt> <b> 2023 - Actualidad: </b> </dt>
+                <dd> Wood Engineering & Consultancy SAS - Trainee Engineer </dd> <br>
+            </dl>
+        </section>
+
+        <section class="section-InteresesPersonales">
+            <h2 id="InteresesPersonales"> INTERESES PERSONALES </h2>
+            <p> Tengo inclinación por actividades deportivas y he participado en clubes de patinaje de velocidad (Club Royal Skate) y voleibol (Equipo
+                Unisalle). Apasionada por la buena lectura y los animales. Me gusta la programación y aprender algo nuevo cada día. </p>
         </section>
     </main>
 
