Cert changes, skills bars missing

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <dt> <b> 2012 - 2018: </b> </dt>
                 <dd> Colegio Bilingue Real Americano - Bachiller académico </dd>
                 <dt> <b> 2019 - Actualidad: </b> </dt>
-                <dt> Universidad de la Salle - Ingeniería Química </dt>
+                <dd> Universidad de la Salle - Ingeniería Química </dd>
             </dl>
         </section>
 
@@ -68,13 +68,13 @@
         </section>
 
         <section>
-            <h2 id="Certificados"> CERTIFICADOS </h2>
-            <ul>
-                <a class="a-Certificados" href="https://www.credential.net/38574cf4-b8bf-4a4d-bafc-34cc52c8f3b9#gs.qv5m46"> Certificación en Aspen HYSYS </a> <br>
-                <a class="a-Certificados" href="https://drive.google.com/file/d/1OcGmWyv0HdTmwNblKvi0eisORgNkYfkh/view"> Participación en el III Congreso Internacional de Investigación e 
-                    Innovación Ambiental (Noviembre, 2022) </a> <br>
-                <a class="a-Certificados" href="https://www.udemy.com/certificate/UC-0627a829-f492-4758-a823-8ededef2d9e4/"> Curso de programación en Python </a> <br>
-                <a class="a-Certificados" href="https://www.udemy.com/certificate/UC-9bec6ad7-1d56-43de-8a2c-c0adbdc47d83/"> Curso en Aspen Plus </a> <br>
+            <h2 id="Certificados"> CERTIFICADOS <br> <p class="MiniText"> Puedes verlos haciendo click sobre ellos </p> </h2>
+            <ul class="ul-Certificados">
+                <li><a class="a-Certificados" href="https://www.credential.net/38574cf4-b8bf-4a4d-bafc-34cc52c8f3b9#gs.qv5m46"> Certificación en Aspen HYSYS </a> </li>
+                <li><a class="a-Certificados" href="https://drive.google.com/file/d/1OcGmWyv0HdTmwNblKvi0eisORgNkYfkh/view"> Participación en el III Congreso Internacional de Investigación e 
+                    Innovación Ambiental (Noviembre, 2022) </a> </li>
+                <li><a class="a-Certificados" href="https://www.udemy.com/certificate/UC-0627a829-f492-4758-a823-8ededef2d9e4/"> Curso de programación en Python </a> </li>
+                <li><a class="a-Certificados" href="https://www.udemy.com/certificate/UC-9bec6ad7-1d56-43de-8a2c-c0adbdc47d83/"> Curso en Aspen Plus </a> </li>
             </ul>
         </section>
 
