--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <button class="dropbtn"> Índice de contenido </button>
                 <div class="DropContent">
                 <a class="a-Indice" href="#SobreMi"> SOBRE MÍ </a> 
+                <a class="a-Indice" href="#Idiomas"> IDIOMAS </a>
                 <a class="a-Indice" href="#DatosPersonales"> DATOS PERSONALES </a>
                 <a class="a-Indice" href="#FormacionAcademica"> FORMACIÓN ACADÉMICA </a>
                 <a class="a-Indice" href="#Habilidades"> HABILIDADES Y SOFTWARE  </a>
@@ -31,6 +32,15 @@
             <p class="p-SobreMi"> Soy una persona responsable, dinámica, alegre y apasionada por el aprendizaje y la innovación, con capacidad de
                 desempeñarme eficientemente en la labor que se me asigne. Me gusta el trabajo en equipo y aportar ideas para lograr
                 soluciones efectivas. </p>
+        </section>
+
+        <section>
+            <h2 id="Idiomas"> IDIOMAS </h2>
+            <ul class="ul-Idiomas">
+                <li> Español (Nativo) </li>
+                <li> Inglés (B2) </li>
+                <li> Francés (A2) </li>
+            </ul>
         </section>
 
         <section>
@@ -54,17 +64,17 @@
         <section>
             <h2 id="Habilidades"> HABILIDADES Y SOFTWARE </h2>
             <h4> HABILIDADES </h4>
-            <div> Trabajo en equipo </div>
-            <div> Resolución de problemas </div> 
-            <div> Comunicación oral y escrita asertiva </div> 
-            <div> Liderazgo </div> 
+            <div class="Skills"> Trabajo en equipo <img src="img/PinkDot.png" class="MiniImg2" alt="Punto negro"> <img src="img/PinkDot.png" class="MiniImg2" alt="Punto negro"> <img src="img/PinkDot.png" class="MiniImg2" alt="Punto negro"> <img src="img/PinkDot.png" class="MiniImg2" alt="Punto negro"> </div>
+            <div class="Skills"> Resolución de problemas <img src="img/PinkDot.png" class="MiniImg2" alt="Punto negro"> <img src="img/PinkDot.png" class="MiniImg2" alt="Punto negro"> <img src="img/PinkDot.png" class="MiniImg2" alt="Punto negro"> </div> 
+            <div class="Skills"> Comunicación oral y escrita asertiva <img src="img/PinkDot.png" class="MiniImg2" alt="Punto negro"> <img src="img/PinkDot.png" class="MiniImg2" alt="Punto negro"> <img src="img/PinkDot.png" class="MiniImg2" alt="Punto negro"> <img src="img/PinkDot.png" class="MiniImg2" alt="Punto negro"> </div> 
+            <div class="Skills"> Liderazgo <img src="img/PinkDot.png" class="MiniImg2" alt="Punto negro"> <img src="img/PinkDot.png" class="MiniImg2" alt="Punto negro"> <img src="img/PinkDot.png" class="MiniImg2" alt="Punto negro"> </div> 
             <h4> SOFTWARE </h4>
-            <div> Aspen HYSYS </div>        
-            <div> Aspen Plus </div> 
-            <div> Microsoft Office </div> 
-            <div> MATLAB </div> 
-            <div> Python </div>
-            <div> HTML y CSS </div>
+            <div class="Skills"> Aspen HYSYS <img src="img/PinkDot.png" class="MiniImg2" alt="Punto negro"> <img src="img/PinkDot.png" class="MiniImg2" alt="Punto negro"> <img src="img/PinkDot.png" class="MiniImg2" alt="Punto negro"> <img src="img/PinkDot.png" class="MiniImg2" alt="Punto negro"> </div>        
+            <div class="Skills"> Aspen Plus <img src="img/PinkDot.png" class="MiniImg2" alt="Punto negro"> <img src="img/PinkDot.png" class="MiniImg2" alt="Punto negro"> <img src="img/PinkDot.png" class="MiniImg2" alt="Punto negro"> </div> 
+            <div class="Skills"> Microsoft Office <img src="img/PinkDot.png" class="MiniImg2" alt="Punto negro"> <img src="img/PinkDot.png" class="MiniImg2" alt="Punto negro"> <img src="img/PinkDot.png" class="MiniImg2" alt="Punto negro"> <img src="img/PinkDot.png" class="MiniImg2" alt="Punto negro"> </div> 
+            <div class="Skills"> MATLAB <img src="img/PinkDot.png" class="MiniImg2" alt="Punto negro"> <img src="img/PinkDot.png" class="MiniImg2" alt="Punto negro"> <img src="img/PinkDot.png" class="MiniImg2" alt="Punto negro"> </div> 
+            <div class="Skills"> Python <img src="img/PinkDot.png" class="MiniImg2" alt="Punto negro"> <img src="img/PinkDot.png" class="MiniImg2" alt="Punto negro"> <img src="img/PinkDot.png" class="MiniImg2" alt="Punto negro"> </div>
+            <div class="Skills"> HTML y CSS <img src="img/PinkDot.png" class="MiniImg2" alt="Punto negro"> <img src="img/PinkDot.png" class="MiniImg2" alt="Punto negro"> </div>
         </section>
 
         <section>
@@ -94,6 +104,6 @@
     </main>
 
     <footer>
-        <h3> Ingresa a mi LinkedIn <a href="https://www.linkedin.com/in/maria-paula-s%C3%A1nchez-cort%C3%A9s-54890923b/"> <img src="img\LinkedIn.png" class="Logo" alt="Logo LinkedIn"> </a> </h3>
+        <h3> Ingresa a mi LinkedIn <a href="https://www.linkedin.com/in/maria-paula-s%C3%A1nchez-cort%C3%A9s-54890923b/"> <img src="img\LinkedIn.png" class="MiniImg" alt="Logo LinkedIn"> </a> </h3>
     </footer>
 </body>
